2016-06-14  Per Bothner  <per@bothner.com>

	Pass windows size events from DomTem to JLine.
	* DomTermBackend.java (setWindowSize): Override.

	* repl.java (startJfxConsole): Change to set window title.

	New option to run a REPL in a JavaFX DomTerm window.
	* DomTermBackend.java: New class, extends org.domterm.Backend.
	It wraps a Kawa REPL.
	* repl.java (startJfxConsole): Use reflection to start DomTerm
	in a JavaFX WebEngine.
	* Shell.java (run): Unwrap InvocationTargetException.

2016-06-11  Per Bothner  <per@bothner.com>

	* standard/Scheme.scm: Update input-prompt1 and input-prompt2.

2016-06-02  Per Bothner  <per@bothner.com>

	* Shell.java (run): Add hook for using JLine.
	Change setting of prompt and newline handling.
	(class Prompter): New static member class.
	* standard/Scheme.java: Defineinput-prompt1 and input-prompt2.

2016-05-27  Per Bothner  <per@bothner.com>

	* lang/Translator.java (checkDefaultBinding): Handle "arrayRANK".
	* standard/Scheme.java: Change bindings of "array" to the type.
	(formatType): Handle GenArrayType.

2016-05-07  Per Bothner  <per@bothner.com>

	* lang/Translator.java (getCompletions): Tweak parameter type.

2016-04-09  Per Bothner  <per@bothner.com>

	* lang/Macro.java:
	A ThisExp used for macro context in 'init-run is now a class name,
	rather than an instance.
	This fixes Savannah bug #46728 "java.lang.VerifyError when class
	that inherits another class is the same name as the file on kawa 2.1".

2016-03-11  Jamison Hope  <jrh@theptrgroup.com>

	* GuiConsole.java (init): On MacOS (at least) the call to setVisible
	must be done on the event thread.

2016-03-10  Per Bothner  <per@bothner.com>

	* standard/Scheme.java: Add a bunch of array procedures.

	* lang/Translator.java: Update to use ArrayList instead of Vector.

2016-02-24  Per Bothner  <per@bothner.com>

	* lang/Translator.java: Support context-senstive completion.
	(rewrite): Look for matching completions.
	(getCompletions): New method.
