@@ -1,3 +1,9 @@
+2016-06-16  Per Bothner  <per@bothner.com>
+
+	Add support for (re-)loading stylesheet under DomTerm.
+	* DomTermBackend.java (loadStyleSheet): New static method.
+	* standard/Scheme.java: Define domterm-load-stylesheet.
+
 2016-06-14  Per Bothner  <per@bothner.com>
 
 	Pass windows size events from DomTem to JLine.
@@ -21,7 +27,7 @@
 	* Shell.java (run): Add hook for using JLine.
 	Change setting of prompt and newline handling.
 	(class Prompter): New static member class.
-	* standard/Scheme.java: Defineinput-prompt1 and input-prompt2.
+	* standard/Scheme.java: Define input-prompt1 and input-prompt2.
 
 2016-05-27  Per Bothner  <per@bothner.com>
 
